# CotekCLion

./: .cproject  .gitattributes  .gitignore  .gitignore.txt  .project  CMakeLists.txt  CotekCLion.ioc  CotekOnOff.qm  CotekOnOff.qms  LICENSE  main.c  releasing.md  stm32f1xx_hal_conf.h
.github/workflows/: build.yml
BMS_Simulator/: .cproject  .mxproject  .project  500sBMZ_logs.txt  500sHYP_logs.txt  600sBattery_logs.txt  CMakeLists.txt  STM32L452RETX_FLASH.ld  STM32L452RETX_RAM.ld
BMS_Simulator/Core/Inc/: app_state.h  buttons.h  can_400DZB.h  can_400HYP.h  can_400ST.h  can_500BMZ.h  can_500HYP.h  can_600.h  can_tx.h  gpio.h  lcd_2004.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
BMS_Simulator/Core/Src/: app_state.c  buttons.c  can.c  can_400DZB.c  can_400HYP.c  can_400ST.c  can_500BMZ.c  can_500HYP.c  can_600.c  can_sniffer.c  can_sniffer.h  can_tx.c  gpio.c  i2c.c  lcd_2004.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  usart.c
BMS_Simulator/Core/Startup/: startup_stm32l452retx.s
Core/Inc/: ao_controller.h  ao_cotek.h  ao_nextion.h  app_signals.h  bms_app.h  bsp.h  can_app.h  debug_trace.h  events.h  qpc_cfg.h  stm32f1xx_hal_conf.h
Core/Src/: Cotek.qms  ao_controller.c  ao_cotek.c  ao_nextion.c  batt_classify.c  bms_app.c  bms_fault_decode.c  bsp.c  bsut.c  can_app.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
Cotek4AOs/: .editorconfig  .gitattributes  .gitattributes.txt  .mxproject  .project  4AOsModel.qm  BMS_FAULT_DECODER_README.md  CMakeLists.txt  Cotek2AO.qm  README.md  releasing.md
Cotek4AOs/.github/workflows/: release.yml
Cotek4AOs/Core/Inc/: app_signals.h  batt_classify.h  bms_debug.h  bms_fault_decode.h  can_app.h  can_proto.h  main.h  stm32f1xx_it.h
Cotek4AOs/Core/Src/: Cotek.qm  ao_cotek.c  ao_nextion.c  batt_classify.c  bms_app.c  bsp.c  can_app.c  debug_trace.c
Cotek4AOs/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_can.h
Cotek4AOs/qpc/: qpc.h
Cotek4AOs/qpc/ports/arm-cm/qv/gnu/: qp_port.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_can.c
cmake/: arm-none-eabi.cmake
